# QuickStartLinux

./: Makefile  README.md  build_tsj.sh  build_tsj_noNet.sh  build_tsj_noNet_Part2.sh  gitpush.sh  set_tsj.sh  warning.md  wltsetting.py  zsh_configuration.txt
Info/: fileInfo.md  processInfo.md  sysChange.md  sysInfo.md  userChange.md  userInfo.md  userSyshistory.md
Info/cluster/: MPItest.md  autoOptionChange.sh  slurmWatch.sh
Info/cluster/autoOptionChange/: WRF_rs1.sh  autoOptionChange.sh
Info/cluster/computeNode/: build_slurm.sh  sensor.sh  slurm.md  slurm.sh
Info/cluster/setHostAndRank/: big-rankfile-new  hostname1.txt
Info/cluster/setHostAndRank/learnmetis/: create_graphfile  create_graphfile_in_c.c  test_graphfile.part.3  test_graphfile.part.4
Install/: set_bin.sh
cluster/: MPItest.md  slurm_PBS.txt
cluster/autoBestNumTest/: autoGpaw.py  autohpcg.sh  bestGCDNum.sh
cluster/autoOptionChange/: autoMe.sh
cluster/computeNode/: sensor.sh  slurm.md  slurm.sh
cluster/setHostAndRank/: change_hostname.sh  rankfile.txt  xx.slurm
cluster/setHostAndRank/learnmetis/: README.md  graphfile.txt  graphfile.txt.part.4  input.txt
commands/: RegCp.md  awk.md  du.md  find.md  git.md  grep.md  iftop.md  ls.md  make_MakeFile.md  mv.md  netstat.md  ps.md  sed.md  shellScript.md  sourcetrail.md  sshJump.md  tar.md  tmux.md  vim.md
config/: .vimrc
hotKey/: bashCommand.md  tmux.md  vim.md
network/: CrawlerDownloadsVideo.md  HomePage.md  IB.md  IP_External network penetration.md  PictureBed.md  domainName.md  testNextwork.md  vpn.md  vpnJump.md
network/clash/: config.yaml  sjf.yaml
project/: CMakeLists.txt  avgSameTime_diffRank.sh  avgTime.sh  build_project.sh  gitpush.sh  recmake.sh  thread_num_perf.sh
project/multTest/: run.sh
project/multTest/copyAndChange/: copyAndChange.sh
project/multTest/copyAndChange/project/: set_llvm_install_raw.sh
project/multTest/copyAndChange/project_alu2/: set_llvm_install_raw.sh
project/multTest/copyAndChange/project_fsu3a/: set_llvm_install_raw.sh
project/multTest/copyAndChange/project_fsu3b/: set_llvm_install_raw.sh
softwareConfigCommands/: GNU.md
sysInfo/: sysInfo.md
